--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBhaNW_syat7xpVhXWaV42GxJOqK5gBrmI"/>
+            android:value="YOUR_API_KEY"/>
     </application>
 </manifest>
